--- a/students/Carlie.html
+++ b/students/Carlie.html
@@ -101,11 +101,11 @@
 
       <!-- Begin Title Content -->
       <div class="page-title">
-        <h4 class="ib_main_header">Student Name</h4>
+        <h4 class="ib_main_header">Carlie</h4>
         <div class="social-icons">
           <a href="https://twitter.com/"><i class="icon-twitter ib-social-icons"></i></a>
-          <a href="http://www.linkedin.com/"><i class="icon-linkedin-sign ib-social-icons"></i></a>
-          <a href="https://github.com/"><i class="icon-github ib-social-icons"></i></a>
+          <a href="https://www.linkedin.com/in/carlie-anglemire-457069167//"><i class="icon-linkedin-sign ib-social-icons"></i></a>
+          <a href="https://github.com/automobileslie.github.io"><i class="icon-github ib-social-icons"></i></a>
           <a href="#"><i class="icon-rss ib-social-icons"></i></a>
         </div>
 
@@ -138,7 +138,7 @@
                 <div class="services-title"><h3>Biography</h3></div>
                 <div class="clear"></div>
                 <p>
-                  Bio here... Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut. 
+                  I have a B.A. in French and Philosophy and a Ph.D. in Philosophy. I taught as an adjunct instructor for a couple of years, and for the last six months I worked at a bakery in New York City. So far, I am enjoying the challenges of learning coding. Some other things that I like are cooking, gardening, biking, writing, theatre, poetry, and music.
                 </p>
               </div>
             </div>
@@ -148,8 +148,8 @@
                 <div class="services-title"><h3>Education</h3></div>
                 <div class="clear"></div>
                 <ul>
-                  <li>University</li>
-                  <li>Other School</li>
+                  <li>Stony Brook University</li>
+                  <li>DePaul University</li>
                 </ul>
               </div>
             </div>
