--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/Carlie.html">Carlie</a>
+                      <a href="students/Carlie.html">Carlie Anglemire</a>
                     </h3>
                   </div>
                   <p class="home-blog-post-meta">Taking a walk on Ruby Row</p>
